--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.8",
+    "framer-motion": "^12.6.3",
+    "multer": "^1.4.5-lts.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.2",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
